--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./build/src/server.js",
   "scripts": {
     "dev": "tsx watch ./src/server.js",
+    "knex": "node --no-warnings --import tsx ./node_modules/knex/bin/cli.js",
     "lint": "eslint ./src/ --ext .ts --fix"
   },
   "keywords": [],
