--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "typescript-eslint": "^8.33.1"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "fastify": "^5.3.3",
     "knex": "^3.1.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "zod": "^3.25.56"
   }
 }
