--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript-eslint": "^8.33.1"
   },
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.3",
     "knex": "^3.1.0",
