--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "tsx watch ./src/server.js",
     "knex": "node --no-warnings --import tsx ./node_modules/knex/bin/cli.js",
     "test": "vitest",
+    "build": "tsup ./src/ --out-dir ./build",
     "lint": "eslint ./src/ --ext .ts --fix"
   },
   "keywords": [],
@@ -21,6 +22,7 @@
     "eslint": "^8.57.1",
     "globals": "^16.2.0",
     "supertest": "^7.1.1",
+    "tsup": "^8.1.0",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.33.1",
