feat: Finalizando a configuração do ambiente para o deploy

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 NODE_ENV=development
+DATABASE_CLIENT="<client_name>"
 DATABASE_URL="<file_directory>/<file_name> | <protocol>://<hostname | ip>:<port>/<configs?>"
