--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "./build/src/server.js",
+  "engines": {
+    "node": ">=22.14"
+  },
   "scripts": {
     "dev": "tsx watch ./src/server.js",
     "knex": "node --no-warnings --import tsx ./node_modules/knex/bin/cli.js",
@@ -14,6 +17,14 @@
   "author": "wanderson alves",
   "license": "MIT",
   "type": "module",
+  "dependencies": {
+    "@fastify/cookie": "^11.0.2",
+    "dotenv": "^16.5.0",
+    "fastify": "^5.3.3",
+    "knex": "^3.1.0",
+    "pg": "^8.16.0",
+    "zod": "^3.25.56"
+  },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
     "@rocketseat/eslint-config": "^2.2.2",
@@ -21,19 +32,12 @@
     "@types/supertest": "^6.0.3",
     "eslint": "^8.57.1",
     "globals": "^16.2.0",
+    "sqlite3": "^5.1.7",
     "supertest": "^7.1.1",
     "tsup": "^8.1.0",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.33.1",
     "vitest": "^3.2.3"
-  },
-  "dependencies": {
-    "@fastify/cookie": "^11.0.2",
-    "dotenv": "^16.5.0",
-    "fastify": "^5.3.3",
-    "knex": "^3.1.0",
-    "sqlite3": "^5.1.7",
-    "zod": "^3.25.56"
   }
 }
